<resources>
    <string name="app_name">Delivery</string>

    <!-- Toolbar Title -->
    <string name="delivery_box">택배함</string>
    <string name="my_page">마이페이지</string>

    <!-- Home -->
    <string name="require_login">로그인이 필요합니다.</string>
    <string name="add_invoice">운송장 번호 추가하기</string>
    <string name="empty_list">저장된 택배가 없어요!</string>
    <string name="nickname_title">"%1$s님,
택배가 지금 오고 있어요!"</string>
    <string name="modify">편집</string>

    <!-- Add -->
    <string name="invoice">운송장 번호</string>
    <string name="company">택배사</string>
    <string name="recommend_company">추천 택배사</string>
    <string name="add_invoice_complete">운송장 번호 등록이 완료되었습니다.</string>

    <!-- Google Auth -->
    <string name="firebase_client_id">518617835946-93edqvqndl1ihuq693thdbhcm49i9e86.apps.googleusercontent.com</string>

    <!-- Error -->
    <string name="network_error">네트워크 오류가 발생했습니다.</string>
    <string name="undefined_error">알 수 없는 오류가 발생했습니다.</string>
    <string name="company_code_error">올바르지 않은 택배 코드입니다.</string>

    <!-- Detail -->
    <string name="delivery_lookup">배송 조회</string>
    <string name="item_get">상품인수</string>
    <string name="item_move">상품이동중</string>
    <string name="item_arrive_company">배송지도착</string>
    <string name="item_start_delivery">배송출발</string>
    <string name="item_arrive_home">배송완료</string>
    <string name="not_exist_info">등록된 정보가 없습니다.</string>
    <string name="logout">로그아웃</string>
    <string name="developer">개발자</string>
    <string name="credit">크레딧</string>
    <string name="setting">설정</string>
    <string name="login">Google 계정으로 로그인</string>

</resources>