<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.hunseong.delivery.ui.add.AddViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="5dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_invoice"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:backPressed="@{true}" />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:background="@color/white"
            android:overScrollMode="never"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/invoice_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/add_invoice_background"
                    android:padding="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/invoice_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invoice"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/invoice_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:backgroundTint="@color/primaryColor"
                        android:inputType="number"
                        android:maxLength="20"
                        app:layout_constraintBottom_toBottomOf="@id/invoice_tv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/invoice_tv"
                        app:layout_constraintTop_toTopOf="@id/invoice_tv" />

                    <TextView
                        android:id="@+id/company_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:text="@string/company"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@id/invoice_tv"
                        app:layout_constraintStart_toStartOf="@id/invoice_tv"
                        app:layout_constraintTop_toBottomOf="@id/invoice_tv" />

                    <Spinner
                        android:id="@+id/company_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:companyList="@{vm.companies}"
                        app:layout_constraintBottom_toBottomOf="@id/company_tv"
                        app:layout_constraintEnd_toEndOf="@id/invoice_et"
                        app:layout_constraintStart_toStartOf="@id/invoice_et"
                        app:layout_constraintTop_toTopOf="@id/company_tv" />

                    <Button
                        android:id="@+id/add_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:text="@string/add_invoice"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/company_spinner" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/recommend_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/recommend_company"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/invoice_layout"
                    app:layout_constraintTop_toBottomOf="@id/invoice_layout" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/recommend_chip_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/recommend_tv"
                    app:layout_constraintTop_toBottomOf="@id/recommend_tv"
                    app:recommendList="@{vm.recommends}"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:singleSelection="true" />


                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/primaryColor"
                    app:isLoading="@{vm.companies}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/recommend_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/primaryColor"
                    app:isLoading="@{vm.recommends}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recommend_tv"
                    app:layout_constraintVertical_bias="0.2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>
</layout>